messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-blue
  template:
    metadata:
      labels:
        app: django-messaging-blue
    spec:
      containers:
      - name: django-messaging-app
        image: s-shemmee/messaging-app:2.0 # Use version 2.0 for rolling update
        ports:
        - containerPort: 8000
