messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-green
  template:
    metadata:
      labels:
        app: django-messaging-green
    spec:
      containers:
      - name: django-messaging-app
        image: s-shemmee/messaging-app:latest # Use latest for green deployment
        ports:
        - containerPort: 8000
