messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-blue-service
spec:
  selector:
    app: django-messaging-blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-green-service
spec:
  selector:
    app: django-messaging-green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
